--- a/projects/angular-mydatepicker/src/lib/css/angular-mydatepicker.style.css
+++ b/projects/angular-mydatepicker/src/lib/css/angular-mydatepicker.style.css
@@ -365,9 +365,14 @@
 .myDpMonthYearSelBar {
   display: flex;
   height: 30px;
+  flex-wrap: nowrap;
+  flex-direction:row;
   background-color: #fff;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+}
+.myDpMonthSelBar, .myDpYearSelBar {
+  width:49%;
+  display:flex;
+  justify-content: space-between;
 }
 
 .myDpPrevBtn {
